--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,5 @@
   "bracketSpacing": true,
   "tabWidth": 2,
   "useTabs": false,
-  "trailingComma": "es5",
-  "semi": true
+  "trailingComma": "es5"
 }
